--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,7 @@ jobs:
   release-linux-386:
     name: release linux/386
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@master
     - name: compile and release
