--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,31 +8,31 @@ on:
 
 jobs:
 
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.14
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go mod download
-
-    - name: Build
-      run: go build -v .
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#    - name: Set up Go 1.x
+#      uses: actions/setup-go@v2
+#      with:
+#        go-version: ^1.14
+#      id: go
+#
+#    - name: Check out code into the Go module directory
+#      uses: actions/checkout@v2
+#
+#    - name: Get dependencies
+#      run: |
+#        go mod download
+#
+#    - name: Build
+#      run: go build -v .
       
   release-linux-386:
     name: release linux/386
     runs-on: ubuntu-latest
-    needs: build
+    #needs: build
     steps:
     - uses: actions/checkout@master
     - name: compile and release
