--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,37 +8,23 @@ on:
 
 jobs:
 
-#  build:
-#    name: Build
-#    runs-on: ubuntu-latest
-#    steps:
-#
-#    - name: Set up Go 1.14
-#      uses: actions/setup-go@v2
-#      with:
-#        go-version: ^1.14
-#      id: go
-#
-#    - name: Check out code into the Go module directory
-#      uses: actions/checkout@v2
-#
-#    - name: Get dependencies
-#      run: |
-#        go mod download
-#
-#    - name: Build
-#      run: go build -v .
-
-  release-linux-x64:
-    name: release linux/amd64
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    #needs: build
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: thiago-scherrer/go-release.action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        GOARCH: amd64
-        GOOS: linux
-        CMD_PATH: "  "
+
+    - name: Set up Go 1.14
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.14
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Get dependencies
+      run: |
+        go mod download
+
+    - name: Build
+      run: go build -v .
