--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,3 +28,14 @@ jobs:
 
     - name: Build
       run: go build -v .
+
+  release-linux-amd64:
+    name: release linux/amd64
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: thiago-scherrer/go-release-action@master
+      with:
+        github_token: ${{ secrets.GT_TOKEN }}
+        goos: linux
+        goarch: amd64
