--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,10 +32,11 @@ jobs:
   release-linux-amd64:
     name: release linux/amd64
     runs-on: ubuntu-latest
+    #needs: job1
     steps:
     - uses: actions/checkout@v2
     - uses: thiago-scherrer/go-release-action@master
       with:
-        github_token: ${{ secrets.GT_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
