--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,15 +29,26 @@ jobs:
     - name: Build
       run: go build -v .
 
-  release-linux-amd64:
-    name: release linux/amd64
+  goreleaser:
     runs-on: ubuntu-latest
-    #needs: job1
     steps:
-    - uses: actions/checkout@v2
-    - uses: thiago-scherrer/go-release-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        goos: linux
-        goarch: amd64
-        
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Unshallow
+        run: git fetch --prune --unshallow
+      -
+        name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.14
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          version: latest
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #needs: job1
