--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,6 +31,7 @@ jobs:
 
   goreleaser:
     runs-on: ubuntu-latest
+    needs: jobs
     steps:
       -
         name: Checkout
@@ -51,4 +52,4 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #needs: job1
+    #
