--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,7 +31,7 @@ jobs:
 
   goreleaser:
     runs-on: ubuntu-latest
-    ##needs: jobs
+    #needs: jobs
     steps:
       -
         name: Checkout
