--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,38 +1,12 @@
-name: Go
+name: goreleaser
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+  push:
 
-      
 jobs:
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.14
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go mod download
-
-    - name: Build
-      run: go build -v .
-
   goreleaser:
     runs-on: ubuntu-latest
-    #needs: jobs
     steps:
       -
         name: Checkout
@@ -53,4 +27,62 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #
+
+
+#name: Go
+#
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#
+#      
+#jobs:
+#
+#  build:
+#    name: Build
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#    - name: Set up Go 1.14
+#      uses: actions/setup-go@v2
+#      with:
+#        go-version: ^1.14
+#      id: go
+#
+#    - name: Check out code into the Go module directory
+#      uses: actions/checkout@v2
+#
+#    - name: Get dependencies
+#      run: |
+#        go mod download
+#
+#    - name: Build
+#      run: go build -v .
+#
+#  goreleaser:
+#    runs-on: ubuntu-latest
+#    #needs: jobs
+#    steps:
+#      -
+#        name: Checkout
+#        uses: actions/checkout@v2
+#      -
+#        name: Unshallow
+#        run: git fetch --prune --unshallow
+#      -
+#        name: Set up Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.14
+#      -
+#        name: Run GoReleaser
+#        uses: goreleaser/goreleaser-action@v2
+#        with:
+#          version: latest
+#          args: release --rm-dist
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#    #
+#
