--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,19 +5,16 @@ on:
     branches: [ master ]
 
 jobs:
-  release-linux-386:
-    name: release linux/386
+  release-linux-amd64:
+    name: release linux/amd64
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: compile and release
-      uses: ngs/go-release.action@v1.0.1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GOARCH: "amd64"
-        GOOS: linux
-        EXTRA_FILES: "LICENSE"
-        HOME: /root/
+    - uses: actions/checkout@v2
+    - uses: wangyoucao577/go-release-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        goos: linux
+        goarch: amd64
 
 
 #name: Go
