--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,8 +26,19 @@ jobs:
 
     - name: Build
       run: go build -v .
-    -
-      name: Run GoReleaser
+
+    - name: Checkout
+      uses: actions/checkout@v2
+    
+    - name: Unshallow
+      run: git fetch --prune --unshallow
+      
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.14.4
+
+    - name: Run GoReleaser
       uses: goreleaser/goreleaser-action@v2
       with:
         version: latest
