--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,9 @@ jobs:
     - name: Build
       run: go build -v .
 
+    - name: Tdd
+      run: go test ./...
+
     - name: Checkout
       uses: actions/checkout@v2
     
