--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
       run: go build -v .
 
     - name: Tdd
-      run: go test ./...
+      run: go test -v ./...
 
     - name: Checkout
       uses: actions/checkout@v2
